@startumlProject



'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''' ACCOUNTS

class UserGroup {
    GlobalId : ulong
    LocalId : ulong
    Name : string
    Accounts : Account[]
}
Organization "1" *-- "*" UserGroup

class Account {
    Id : ulong    
    Name : string
    UserGroups : UserGroup[]
}
UserGroup "*" o- "*" Account
Project "1" o-- "*" Account

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''' ORGANIZATION

class Organization {
    Id : ulong
    Name : string
    Description : string
    
    ActiveProjects : Projects[]
    ArchivedProjects : Projects[]
    UserGroups : UserGroup[]
     
    Logs : LogStorage
    Backups : BackupStorage
}

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''' PROJECT

class Project 
{
    Members : Account[]
    Boards : Board[]
    Tags: Tag[]

    Logs: LogStorage
    Backups : BackupStorage

    createBoard(name: string)
}
Organization *-- Project

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''' BOARD

class Board
{
    name: string
    columns: Column[]

    createColumn(name: string);
    removeColumn(name: string);
    addTask(colName: string, task: Task);

    ''''''''''''''' ????
    getTask(colName: string, rowNum: int); 
    getTask(colNum: int, name: string);
    '''''''''''''''

    getColumns(): Column[]
}
Project "*" o-- "*" Board

'''''''''''''''''''''''''''''

class Column
{
    name: string
    limitOfTask: int
    tasks: Task[]

    getTasks(): Task[]
}

'''''''''''''''''''''''''''''

class Task
{
    Name: string
    Description: string
    Authors: User[]
    AssociatedTasks: Task[]
    CreationTime: DateTime
    Status: string
    Tags: Tag[]
    Components : IComponent[]
}

Task "1" *-- "*" IComponent

'''''''''''''''''''''''''''''

interface IComponent
{
    Name: string
}

class DateComponent
{
    date: Date
}

class IntComponent
{
    value: int
}

class StringComponent
{
    value: string
}

class PanelComponent
{
    panelName: string
    Components : IComponent[]
}

IComponent <|-- DateComponent
IComponent <|-- IntComponent
IComponent <|-- StringComponent
IComponent <|-- PanelComponent
PanelComponent "*" *-- "*" IComponent

'''''''''''''''''''''''''''''```

class Tag
{
    color: Color
    name: string
}
Project "1" *-- "*" Tag

Board "1" *-- "*" Column : Содержит
Column "1" *-- "*" Task : Содержит
Task "1" o-- "*" Tag

@enduml